syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "GeneratorProto";
option java_package = "com.yofujitsu.grpccommon";
option objc_class_prefix = "RTG";

package service;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service DataServer {

  rpc AddData(GRPCData) returns (google.protobuf.Empty); //void

  rpc AddStreamOfData(stream GRPCData) returns (google.protobuf.Empty); //void

}

service AnalyticsServer {

  rpc AskForData(GRPCAnalyticsRequest) returns (stream GRPCData);
}

message GRPCData {
  int64 id = 1; //int64 = long
  int64 heroId = 2;
  google.protobuf.Timestamp timestamp = 3;
  double value = 4;
  ValueType valueType = 5;
}

enum ValueType {
  KILLS = 0;
  DEATHS = 1;
  ASSISTS = 2;
}

message GRPCAnalyticsRequest {
  int64 batchSize = 1;
}